Bug 290553. Make the canvas frame translate event coordinates correctly. r+sr=bzbarsky,a=brendan